// Copyright 2024 The NativeLink Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.github.trace_machina.nativelink.remote_execution;

import "build/bazel/remote/execution/v2/remote_execution.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";

/// This API describes how schedulers communicate with Worker nodes.
///
/// When a worker node comes online it must be pre-configured with the
/// endpoint of the scheduler it will register with. Once the worker
/// connects to the scheduler it must send a `RegisterSupportedProperties`
/// command to the scheduler. The scheduler will then use this information
/// to determine which jobs the worker can process.
service WorkerApi {
    /// Registers this worker and informs the scheduler what properties
    /// this worker supports. The response must be listened on the client
    /// side for updates from the server. The first item sent will always be
    /// a ConnectionResult, after that it is undefined.
    rpc ConnectWorker(ConnectWorkerRequest) returns (stream UpdateForWorker);

    /// Message used to let the scheduler know that it is still alive as
    /// well as check to see if the scheduler is still alive. The scheduler
    /// may close the connection if the worker has not sent any messages
    /// after some amount of time (configured in the scheduler's
    /// configuration).
    rpc KeepAlive(KeepAliveRequest) returns (google.protobuf.Empty);

    /// Informs the scheduler that the service is going offline and
    /// should stop issuing any new actions on this worker.
    ///
    /// The worker may stay connected even after sending this command
    /// and may even send an `ExecuteResult` after sending this command.
    /// It is up to the scheduler implementation to decide how to handle
    /// this case.
    ///
    /// Any job that was running on this instance likely needs to be
    /// executed again, but up to the scheduler on how or when to handle
    /// this case.
    rpc GoingAway(GoingAwayRequest) returns (google.protobuf.Empty);

    /// Informs the scheduler about the result of an execution request.
    rpc ExecutionResponse(ExecuteResult) returns (google.protobuf.Empty);
}

/// Request object for keep alive requests.
message KeepAliveRequest {
    /// ID of the worker making the request.
    string worker_id = 1;
    reserved 2; // NextId.
}

/// Request object for going away requests.
message GoingAwayRequest {
    /// ID of the worker making the request.
    string worker_id = 1;
    reserved 2; // NextId.
}

/// Represents the initial request sent to the scheduler informing the
/// scheduler about this worker's capabilities and metadata.
message ConnectWorkerRequest {
    /// The list of properties this worker can support. The exact
    /// implementation is driven by the configuration matrix between the
    /// worker and scheduler.
    ///
    /// The scheduler may reject this worker if any property keys that
    /// the scheduler is not configured to support, or may simply ignore
    /// the unsupported properties.
    ///
    /// The details on how to use this property can be found here:
    /// https://github.com/TraceMachina/nativelink/blob/3147265047544572e3483c985e4aab0f9fdded38/nativelink-config/src/cas_server.rs
    repeated build.bazel.remote.execution.v2.Platform.Property properties = 1;

    /// Prefix to use for worker IDs. This is primarily used for debugging
    /// or for other systems to identify workers. The scheduler will always
    /// append this prefix to the assigned worker_id followed by a UUIDv6.
    string worker_id_prefix = 2;

    reserved 3; // NextId.
}

/// The result of an ExecutionRequest.
message ExecuteResult {
    /// ID of the worker making the request.
    string worker_id = 1;

    /// The `instance_name` this task was initially assigned to. This is set by the client
    /// that initially sent the job as part of the BRE protocol.
    string instance_name = 6;

    /// The operation ID that was executed.
    string operation_id = 8;

    /// The actual response data.
    oneof result {
        /// Result of the execution. See `build.bazel.remote.execution.v2.ExecuteResponse`
        /// for details.
        build.bazel.remote.execution.v2.ExecuteResponse execute_response = 4;

        /// An internal error. This is only present when an internal error happened that
        /// was not recoverable. If the execution job failed but at no fault of the worker
        /// it should not use this field and should send the error via execute_response.
        google.rpc.Status internal_error = 5;
    }

    reserved 9; // NextId.
}

/// Result sent back from the server when a node connects.
message ConnectionResult {
    /// The internal ID given to the newly connected node.
    string worker_id = 1;
    reserved 2; // NextId.
}

/// Request to kill a running operation sent from the scheduler to a worker.
message KillOperationRequest {
    /// The the operation id for the operation to be killed.
    string operation_id = 1;
    reserved 2; // NextId.
}
/// Communication from the scheduler to the worker.
message UpdateForWorker {
    oneof update {
        /// This will be sent only as the first item in the stream after the node
        /// has connected.
        ConnectionResult connection_result = 1;

        /// Message used to let the worker know that it is still alive as well
        /// as check to see if the worker is still alive. The worker
        /// may close the connection if the scheduler has not sent any messages
        /// after some amount of time (configured in the scheduler's
        /// configuration).
        google.protobuf.Empty keep_alive = 2;

        /// Informs the worker about some work it should begin performing the
        /// requested action.
        StartExecute start_action = 3;

        /// Informs the worker that it has been disconnected from the pool.
        /// The worker may discard any outstanding work that is being executed.
        google.protobuf.Empty disconnect = 4;

        /// Instructs the worker to kill a specific running operation.
        KillOperationRequest kill_operation_request = 5;
    }
    reserved 6; // NextId.
}

message StartExecute {
    /// The action information used to execute job.
    build.bazel.remote.execution.v2.ExecuteRequest execute_request = 1;

    /// Id of the operation.
    string operation_id = 4;

    /// The time at which the command was added to the queue to allow population
    /// of the ActionResult.
    google.protobuf.Timestamp queued_timestamp = 3;

    /// The post-computed platform properties that the scheduler has reserved for
    /// the action.
    build.bazel.remote.execution.v2.Platform platform = 5;

    /// The ID of the worker that is executing the action.
    string worker_id = 6;

    reserved 7; // NextId.
}

/// This is a special message used to save actions into the CAS that can be used
/// by programs like bb_browswer to inspect the history of a build.
/// Note: Ensure this is always compatible with:
/// https://github.com/buildbarn/bb-remote-execution/blob/e95e066eb624dc9099682394ec18c12e218e8fc4/pkg/proto/cas/cas.proto#L23
message HistoricalExecuteResponse {
    reserved 2;

    build.bazel.remote.execution.v2.Digest action_digest = 1;
    build.bazel.remote.execution.v2.ExecuteResponse execute_response = 3;
}
